kubernetes/apps/traefik/base/namespace.yaml
# kubernetes/apps/traefik/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
